fix: remove layout bug

--- a/src/Components/StartPage/startPage.scss
+++ b/src/Components/StartPage/startPage.scss
@@ -3,7 +3,7 @@ h1 {
 	font-size: 6rem;
 	padding-top: 6rem;
 	margin-top: 0;
-  transform: perspective(100px) rotateX(-20deg) scaleY(0.8) scaleX(0.8);
+  // transform: perspective(100px) rotateX(-20deg) scaleY(0.8) scaleX(0.8);
   text-shadow: 0px -10px 1px #616EAB, 0px -20px 1px #007481;
   text-transform: uppercase;
   user-select: none;
@@ -17,14 +17,15 @@ h1 {
     height: 100vh;
     position: relative;
     user-select: none;
-    transition: all 0.2s;
+    padding: 0;
+    margin: 0;
 	}
 
 	&__item {
 		padding-top: 2rem;
     cursor: pointer;
     text-shadow: 2px -2px 2px rgba(26,238,25, 0.1);
-    
+
     &:hover {
       color: rgba(244,207,0, 1);
       text-shadow: 2px -2px 2px rgba(244,207,0, 0.1);
